--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Creation</title>
     <link href="/dist/output.css" rel="stylesheet" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="apple-touch-icon" href="./public/logo2.png" />
+    <link rel="manifest" href="./public/manifest.json" />
   </head>
 
   <body>
