--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Job Creation</title>
     <link href="/dist/output.css" rel="stylesheet" />
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="./public/logo2.png" />
-    <link rel="manifest" href="./public/manifest.json" />
+    <link rel="apple-touch-icon" href="/logo2.png" />
+    <link rel="manifest" href="/manifest.json" />
   </head>
 
   <body>
