--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Job Creation</title>
     <link href="/dist/output.css" rel="stylesheet" />
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="/logo2.png" />
+    <link rel="apple-touch-icon" href="/logos.png" />
     <link rel="manifest" href="/manifest.json" />
   </head>
 
