--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="/logos.png" />
     <link rel="manifest" href="/manifest.json" />
+    <link href="https://fonts.cdnfonts.com/css/work-sans" rel="stylesheet" />
   </head>
 
   <body>
